cabal-version: 3.4
name: rubik
version: 0.1.0.0
license: ISC

common commons
  build-depends: base, base-unicode-symbols, containers, containers-unicode-symbols, finite-typelits, group-theory
  default-language: GHC2021
  default-extensions: BlockArguments UnicodeSyntax MultiWayIf DataKinds TypeFamilies RecordWildCards
  ghc-options: -Wall -Wextra -Wno-name-shadowing

library
  import: commons
  hs-source-dirs: library
  exposed-modules: Rubik

executable rubik
  import: commons
  hs-source-dirs: executables/rubik
  main-is: Main.hs
  build-depends: rubik
