cabal-version: 3.4
name: rubik
version: 0.1.0.0
license: ISC

common commons
  build-depends:
    , base
    , base-unicode-symbols
    , containers
    , containers-unicode-symbols
    , finite-typelits
    , group-theory

  default-language: GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    MultiWayIf
    RecordWildCards
    TypeFamilies
    UnicodeSyntax
    ViewPatterns
    PatternSynonyms

  ghc-options: -Wall -Wextra

library
  import: commons
  hs-source-dirs: library
  exposed-modules: Data.Finite.Simplex Data.Group.Symmetry Rubik

executable rubik
  import: commons
  hs-source-dirs: executables/rubik
  main-is: Main.hs
  build-depends: rubik

test-suite checks
  import: commons
  type: exitcode-stdio-1.0
  hs-source-dirs: test-suites/checks
  main-is: Main.hs
  build-depends: rubik, tasty, tasty-quickcheck
